// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonApiDeserializer Collection Response (1) RO data object contains nested full resource objects 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "created_at": "2019-05-09T15:28:44.000Z",
        "name": "Hogwarts Varsity Quidditch Team 2019",
        "updated_at": "2019-06-24T17:49:16.000Z",
      },
      "id": "123",
      "relationships": Object {
        "contact": Object {
          "data": Object {
            "id": "11650",
            "type": "contact",
          },
        },
        "events": Object {
          "data": Array [
            Object {
              "attributes": Object {
                "created_at": "2019-06-05T02:06:54.000Z",
                "name": "Training with Prof Snape",
                "status": "active",
                "updated_at": "2019-06-21T18:30:25.000Z",
              },
              "id": "351978",
              "type": "event",
            },
            Object {
              "attributes": Object {
                "created_at": "2019-06-05T02:06:54.000Z",
                "name": "Training with Prof Snape 2",
                "status": "pending",
                "updated_at": "2019-06-21T18:30:25.000Z",
              },
              "id": "351979",
              "type": "event",
            },
          ],
        },
        "organization": Object {
          "data": Object {
            "attributes": Object {
              "created_at": "2018-11-20T21:41:49.000Z",
              "name": "Hogwarts Academy",
              "updated_at": "2019-06-24T18:35:19.000Z",
            },
            "id": "19925",
            "relationships": Object {
              "address": Object {
                "data": Object {
                  "attributes": Object {
                    "abbreviated_region": "wa",
                    "city": "Dufftown",
                    "country": "Scotland",
                    "created_at": "2017-12-20T22:23:58.000Z",
                    "region": "Scottish Highlands",
                    "street": "123 Banffshire Ave",
                    "updated_at": "2017-12-20T22:23:58.000Z",
                    "zip": "12345",
                  },
                  "id": "27284",
                  "type": "address",
                },
              },
            },
            "type": "organization",
          },
        },
      },
      "type": "fundraiser",
    },
    Object {
      "attributes": Object {
        "created_at": "2019-05-09T15:28:44.000Z",
        "name": "Hogwarts JV Quidditch Team 2019",
        "updated_at": "2019-06-24T17:49:16.000Z",
      },
      "id": "1234",
      "relationships": Object {
        "contact": Object {
          "data": Object {
            "id": "11651",
            "type": "contact",
          },
        },
        "events": Object {
          "data": Array [
            Object {
              "attributes": Object {
                "created_at": "2019-06-05T02:06:54.000Z",
                "name": "Training with Prof Snape 2",
                "status": "active",
                "updated_at": "2019-06-21T18:30:25.000Z",
              },
              "id": "351980",
              "type": "event",
            },
            Object {
              "attributes": Object {
                "created_at": "2019-06-05T02:06:54.000Z",
                "name": "Training with Prof Snape 3",
                "status": "pending",
                "updated_at": "2019-06-21T18:30:25.000Z",
              },
              "id": "351981",
              "type": "event",
            },
          ],
        },
        "organization": Object {
          "data": Object {
            "attributes": Object {
              "created_at": "2018-11-20T21:41:49.000Z",
              "name": "Hogwarts Academy 2",
              "updated_at": "2019-06-24T18:35:19.000Z",
            },
            "id": "19926",
            "relationships": Object {
              "address": Object {
                "data": Object {
                  "attributes": Object {
                    "abbreviated_region": "oh",
                    "city": "Dufftown 2",
                    "country": "Scotland 2",
                    "created_at": "2017-12-20T22:23:58.000Z",
                    "region": "Scottish Highlands 2",
                    "street": "124 Banffshire Ave",
                    "updated_at": "2017-12-20T22:23:58.000Z",
                    "zip": "12346",
                  },
                  "id": "27285",
                  "type": "address",
                },
              },
            },
            "type": "organization",
          },
        },
      },
      "type": "fundraiser",
    },
  ],
  "deserialized": true,
}
`;

exports[`JsonApiDeserializer Collection Response (2) RO data object contains nested full resource objects 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "title": "JSON:API paints my bikeshed!",
      },
      "id": "1",
      "links": Object {
        "self": "http://example.com/articles/1",
      },
      "relationships": Object {
        "author": Object {
          "data": Object {
            "attributes": Object {
              "first-name": "Dan",
              "last-name": "Gebhardt",
              "twitter": "dgeb",
              "type": "human",
            },
            "id": "9",
            "links": Object {
              "self": "http://example.com/people/9",
            },
            "type": "people",
          },
          "links": Object {
            "related": "http://example.com/articles/1/author",
            "self": "http://example.com/articles/1/relationships/author",
          },
        },
        "comments": Object {
          "data": Array [
            Object {
              "attributes": Object {
                "body": "First!",
              },
              "id": "5",
              "links": Object {
                "self": "http://example.com/comments/5",
              },
              "relationships": Object {
                "author": Object {
                  "data": Object {
                    "id": "2",
                    "type": "people",
                  },
                },
              },
              "type": "comments",
            },
            Object {
              "attributes": Object {
                "body": "I like XML better",
              },
              "id": "12",
              "links": Object {
                "self": "http://example.com/comments/12",
              },
              "relationships": Object {
                "author": Object {
                  "data": Object {
                    "attributes": Object {
                      "first-name": "Dan",
                      "last-name": "Gebhardt",
                      "twitter": "dgeb",
                      "type": "human",
                    },
                    "id": "9",
                    "links": Object {
                      "self": "http://example.com/people/9",
                    },
                    "type": "people",
                  },
                },
              },
              "type": "comments",
            },
          ],
          "links": Object {
            "related": "http://example.com/articles/1/comments",
            "self": "http://example.com/articles/1/relationships/comments",
          },
        },
      },
      "type": "articles",
    },
  ],
  "deserialized": true,
}
`;

exports[`JsonApiDeserializer Resource Response (1) RO data object contains nested full resource objects 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "created_at": "2019-05-09T15:28:44.000Z",
      "name": "Hogwarts Varsity Quidditch Team 2019",
      "updated_at": "2019-06-24T17:49:16.000Z",
    },
    "id": "123",
    "relationships": Object {
      "contact": Object {
        "data": Object {
          "id": "11650",
          "type": "contact",
        },
      },
      "events": Object {
        "data": Array [
          Object {
            "attributes": Object {
              "created_at": "2019-06-05T02:06:54.000Z",
              "name": "Training with Prof Snape",
              "status": "active",
              "updated_at": "2019-06-21T18:30:25.000Z",
            },
            "id": "351978",
            "type": "event",
          },
          Object {
            "attributes": Object {
              "created_at": "2019-06-05T02:06:54.000Z",
              "name": "Training with Prof Snape 2",
              "status": "pending",
              "updated_at": "2019-06-21T18:30:25.000Z",
            },
            "id": "351979",
            "type": "event",
          },
        ],
      },
      "organization": Object {
        "data": Object {
          "attributes": Object {
            "created_at": "2018-11-20T21:41:49.000Z",
            "name": "Hogwarts Academy",
            "updated_at": "2019-06-24T18:35:19.000Z",
          },
          "id": "19925",
          "relationships": Object {
            "address": Object {
              "data": Object {
                "attributes": Object {
                  "abbreviated_region": "wa",
                  "city": "Dufftown",
                  "country": "Scotland",
                  "created_at": "2017-12-20T22:23:58.000Z",
                  "region": "Scottish Highlands",
                  "street": "123 Banffshire Ave",
                  "updated_at": "2017-12-20T22:23:58.000Z",
                  "zip": "12345",
                },
                "id": "27284",
                "type": "address",
              },
            },
          },
          "type": "organization",
        },
      },
    },
    "type": "fundraiser",
  },
  "deserialized": true,
}
`;

exports[`JsonApiDeserializer Resource Response (2) RO data object contains nested full resource objects 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "body": "The shortest article. Ever.",
      "created_at": "2015-05-22T14:56:29.000Z",
      "title": "JSON:API paints my bikeshed!",
      "updated_at": "2015-05-22T14:56:28.000Z",
    },
    "id": "1",
    "relationships": Object {
      "author": Object {
        "data": Object {
          "attributes": Object {
            "age": 80,
            "gender": "male",
            "name": "John",
          },
          "id": "42",
          "type": "people",
        },
      },
    },
    "type": "articles",
  },
  "deserialized": true,
}
`;

exports[`JsonApiDeserializer Resource Response (3) RO data object contains nested full resource objects 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "created_at": "2019-06-30T22:33:41+0000",
      "name": "Mercer Island Book Store",
      "updated_at": "2019-06-30T22:33:41+0000",
    },
    "id": "1",
    "relationships": Object {
      "owner": Object {
        "data": Object {
          "attributes": Object {
            "created_at": "2019-06-30T22:33:41+0000",
            "full_name": "John Doe",
            "updated_at": "2019-06-30T22:33:41+0000",
          },
          "id": "2",
          "relationships": Object {
            "address": Object {
              "data": Object {
                "attributes": Object {
                  "created_at": "2019-06-30T22:33:41+0000",
                  "street": "123 Test Ave",
                  "type": "commercial",
                  "updated_at": "2019-06-30T22:33:41+0000",
                  "zip_code": "12345",
                },
                "id": "3",
                "relationships": Object {
                  "driveway": Object {
                    "data": Object {
                      "attributes": Object {
                        "created_at": "2019-06-30T22:33:41+0000",
                        "type": "parking_lot",
                        "updated_at": "2019-06-30T22:33:41+0000",
                      },
                      "id": "4",
                      "type": "driveway",
                    },
                  },
                },
                "type": "address",
              },
            },
          },
          "type": "owner",
        },
      },
    },
    "type": "book",
  },
  "deserialized": true,
}
`;

exports[`JsonApiDeserializer Resource Response (4) RO data object contains nested full resource objects 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "body": "The shortest article. Ever.",
      "created_at": "2015-05-22T14:56:29.000Z",
      "title": "JSON:API paints my bikeshed!",
      "updated_at": "2015-05-22T14:56:28.000Z",
    },
    "id": "1",
    "relationships": Object {
      "author": Object {
        "data": Object {
          "id": "42",
          "type": "people",
        },
      },
    },
    "type": "articles",
  },
  "deserialized": true,
  "meta": Object {
    "foo": "bar",
  },
}
`;

exports[`JsonApiDeserializer Resource Response (5) RO data object contains nested full resource objects 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "title": "JSON:API paints my bikeshed!",
    },
    "id": "1",
    "relationships": Object {
      "author": Object {
        "links": Object {
          "related": "http://example.com/articles/1/author",
        },
      },
    },
    "type": "articles",
  },
  "deserialized": true,
  "links": Object {
    "self": "http://example.com/articles/1",
  },
}
`;

exports[`JsonApiDeserializer Resource Response (6) RO data object contains nested full resource objects 1`] = `
Object {
  "data": null,
  "deserialized": true,
  "links": Object {
    "self": "http://example.com/articles/1/author",
  },
}
`;

exports[`JsonApiDeserializer Resource Response (7) RO data object contains nested full resource objects 1`] = `
Object {
  "data": Array [],
  "deserialized": true,
  "links": Object {
    "related": "/articles/1/tags",
    "self": "/articles/1/relationships/tags",
  },
}
`;

exports[`JsonApiDeserializer Resource Response (8) RO data object contains nested full resource objects 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "src": "http://example.com/images/productivity.png",
      "title": "Ember Hamster",
    },
    "id": "550e8400-e29b-41d4-a716-446655440000",
    "links": Object {
      "self": "http://example.com/photos/550e8400-e29b-41d4-a716-446655440000",
    },
    "type": "photos",
  },
  "deserialized": true,
}
`;

exports[`JsonApiDeserializer Resource Response (9) RO data object contains nested full resource objects 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "created_at": "2019-05-09T15:28:44.000Z",
      "name": "Hogwarts Academy Girl's Varsity Quidditch",
      "updated_at": "2019-06-28T21:39:18.000Z",
    },
    "id": "40628",
    "relationships": Object {
      "academy": Object {
        "data": Object {
          "id": "321",
          "type": "academy",
        },
      },
      "coach": Object {
        "data": Object {
          "attributes": Object {
            "nickname": "Coach K",
          },
          "id": "2219",
          "type": "coach",
        },
      },
      "events": Object {
        "data": Array [
          Object {
            "attributes": Object {
              "created_at": "2019-06-05T02:06:54.000Z",
              "status": "active",
              "updated_at": "2019-06-21T18:30:25.000Z",
            },
            "id": "321",
            "type": "event",
          },
          Object {
            "attributes": Object {
              "created_at": "2019-06-05T02:06:54.000Z",
              "status": "active",
              "updated_at": "2019-06-21T18:30:25.000Z",
            },
            "id": "432",
            "type": "event",
          },
          Object {
            "attributes": Object {
              "created_at": "2019-06-05T02:06:54.000Z",
              "status": "active",
              "updated_at": "2019-06-21T18:30:25.000Z",
            },
            "id": "543",
            "type": "event",
          },
          Object {
            "attributes": Object {
              "created_at": "2019-06-20T00:17:40.000Z",
              "status": "active",
              "updated_at": "2019-06-21T18:30:25.000Z",
            },
            "id": "654",
            "type": "event",
          },
        ],
      },
      "financial_account": Object {
        "data": Object {
          "id": "111",
          "type": "financial_account",
        },
      },
      "fundraiser": Object {
        "data": null,
      },
      "person": Object {
        "data": Object {
          "id": "123",
          "type": "person",
        },
      },
    },
    "type": "campaign",
  },
  "deserialized": true,
}
`;
